force-app/main/default/objects/Alumno__c/Alumno__c.object-meta.xml
<CustomObject>
    <label>Alumno</label>
    <nameField>
        <label>Nombre Alumno</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alumnos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>