force-app/main/default/objects/Alumno__c/fields/Contacto_de_emergencia__c.field-meta.xml
<CustomField>
    <fullName>Contacto_de_emergencia__c</fullName>
    <label>Contacto de emergencia</label>
    <type>Phone</type>
</CustomField>