force-app/main/default/objects/Alumno__c/fields/EPS__c.field-meta.xml
<CustomField>
    <fullName>EPS__c</fullName>
    <label>EPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Salud Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>