force-app/main/default/objects/Alumno__c/fields/Fecha_inscripcion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_inscripcion__c</fullName>
    <label>Fecha inscripción</label>
    <required>true</required>
    <type>Date</type>
</CustomField>