force-app/main/default/objects/Alumno__c/fields/N_mero_de_identidad__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_identidad__c</fullName>
    <label>Número de identidad</label>
    <length>15</length>
    <type>Text</type>
</CustomField>