force-app/main/default/objects/Alumno__c/fields/Nombre_del_acudiente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_acudiente__c</fullName>
    <label>Nombre del acudiente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>