force-app/main/default/objects/Alumno__c/fields/Tel_fono_del_acudiente__c.field-meta.xml
<CustomField>
    <fullName>Tel_fono_del_acudiente__c</fullName>
    <label>Teléfono del acudiente</label>
    <type>Phone</type>
</CustomField>