force-app/main/default/objects/Alumno__c/fields/Tipo_de_sangre__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_sangre__c</fullName>
    <label>Tipo de sangre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A-</fullName>
            </value>
            <value>
                <fullName>A+</fullName>
            </value>
            <value>
                <fullName>AB-</fullName>
            </value>
            <value>
                <fullName>AB+</fullName>
            </value>
            <value>
                <fullName>O-</fullName>
            </value>
            <value>
                <fullName>O+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>