force-app/main/default/objects/Alumno__c/fields/TotalAsistencias__c.field-meta.xml
<CustomField>
    <fullName>TotalAsistencias__c</fullName>
    <label>Total de asistencias</label>
    <summaryForeignKey>Asistencia__c.Alumno__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>