force-app/main/default/objects/Alumno__c/fields/TotalPagos__c.field-meta.xml
<CustomField>
    <fullName>TotalPagos__c</fullName>
    <label>Total Pagos</label>
    <summarizedField>PagoMensual__c.Monto__c</summarizedField>
    <summaryForeignKey>PagoMensual__c.Alumno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>